Fixed too much bottom padding after submitting the form

--- a/src/assets/styles/modules/form-new.scss
+++ b/src/assets/styles/modules/form-new.scss
@@ -52,6 +52,7 @@
 
     @media (max-width: $breakpoint - 1px) {
       margin-bottom: 30px;
+      display: flex;
     }
 
     &--desktop {
@@ -90,8 +91,11 @@
       z-index: 10;
       opacity: 0;
       cursor: pointer;
-      width: 100%;
-      height: 100%;
+
+      @media (min-width: $breakpoint) {
+        width: 100%;
+        height: 100%;
+      }
     }
 
     button {
